@@ -20,13 +20,14 @@ extern "C" {
 /* Wrapper to call beep with one of the predefined settings. */
 #define beep(BEEPTYPE) system(BEEP_CMD" "BEEPTYPE" &")
 
-char *allocstr(const char *, ...);
+char  *allocstr(const char *, ...);
+char *vallocstr(const char *, va_list);
 /* Create a c-string by allocating memory for it and writing to it,
  * using printf type format characters.
  *
  * Arguments:
- * char *mesg  message to write, may include printf format characters '%'
- * ...         optional arguments for format characters
+ * char *mesg      message to write, may include printf format characters '%'
+ * ... or va_list  optional arguments for format characters
  *
  * Returns a pointer to the allocated string
  */
